--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,72 @@
-body {
+:root {
+  /* primary color */
+  --strong-cyan: hsl(172, 67%, 45%);
+  --strong-cyan-75: hsl(172, 67%, 75%);
+  --strong-cyan-95: hsl(172, 67%, 95%);
+
+  /* neutral */
+  --very-dark-cyan: hsl(183, 100%, 15%);
+  --dark-grayish-cyan: hsl(186, 14%, 43%);
+  --grayish-cyan: hsl(184, 14%, 56%);
+  --light-grayish-cyan: hsl(185, 41%, 84%);
+  --very-light-grayish-cyan: hsl(189, 41%, 97%);
+  --white: hsl(0, 0%, 100%);
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+@font-face {
+  font-family: 'Space Mono';
+  src: url(./assets/fonts/SpaceMono-Bold.ttf);
+  weight: 700;
+}
+
+@font-face {
+  font-family: 'Space Mono';
+  src: url(./assets//fonts/SpaceMono-Regular.ttf);
+  weight: 400;
+}
+
+input {
+  font-size: 24px;
+  font-family: 'Space Mono';
+  font-weight: 700;
+  cursor: pointer;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Space Mono';
+  font-weight: 700;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
